Expanded utils, improved adding logic, fixed default issues.